# KGPassGen-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: audit.yml  lint.yml  publish.yml  test.yml
src/: config.rs  generator.rs  lib.rs  main.rs  url_helper.rs
src/generator/: tests.rs
