[package]
name = "kg_passgen"
version = "0.1.0"
edition = "2024"
description = "Password generator that hashes an input master password and a service url"
repository = "https://github.com/kghandour/KGPassGen-rs"
license = "MIT"
readme = "README.md"
keywords = ["password-generation", "password"]

[dependencies]
arboard = "3.6.1"
url = "2.5.7"
psl = "2.1.175"
md5 = "0.8.0"
sha2 = "0.10.9"
fancy-regex = "0.17.0"
base64 = "0.22.1"
inquire = "0.9.1"